# cryptobot

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  bin.txt  byb.txt  diff.txt  gmon.out  note.md  out.txt  ready event.md  request ticker info  show lines.txt  trading_pairs
.github/workflows/: cmake-single-platform.yml
aot/: Binance.h  Bybit.h  Exchange.h  Https.h  Logger.h  Predictor.h  Types.h  WS.h  cb_manager.h  client_request.h  client_response.h  launcher_predictor.h  market_data_consumer.h  mexc.h  session_status.h  wallet_asset.h
aot/WSImpl/: WSImpl.h
aot/bus/: bus.h  bus_component.h  bus_event.h  bus_old.h
aot/common/: exchange_trading_pair.h  macros.h  mem_pool.h  thread_utils.h  time_utils.h  types.h  utils.h
aot/config/: config.h
aot/event/: general_event.h
aot/impl/: HttpsImpl.h  PredictorImpl.h  WSImpl.h
aot/market_data/: market_update.h
aot/order_gw/: order_gw.h
aot/pnl/: pnl_calculator.h
aot/prometheus/: event.h  service.h
aot/proto/: aot.proto
aot/python/: analizator.py  downloader.py  evaluate_trading_signals cpp.py  evaluate_trading_signals.py  my_types.py  prepare_features_target cpp.py  prepare_features_target.py  prepare_model.py  prepare_model_for_bot.py  strategy.py  utils.py
aot/redpanda_client/: redpanda_client.h
aot/strategy/: BaseStrategy.h  base_strategy.h  kline.h  market_order.h  market_order_book.h  om_order.h  order_manager.h  position_keeper.h  trade_engine.h
bybit/: Binance.h  Bybit.h  ChartInterval.h  Exchange.h  Logger.h  OHLCV.h  Predictor.h  Types.h  WS.h  binance.h  root_certificates.hpp
bybit/WSImpl/: WSImpl.h
bybit/impl/: PredictorImpl.h
bybit/python/: MachineLearning.py  machine_learning.py
doc/: Doxyfile  Doxyfile.bak
doc/ForREADME/: Flowchart.csv
doc/html/: Binance_8h_source.html  Bybit_8h_source.html  ChartInterval_8h_source.html  Exchange_8h_source.html  HttpsImpl_8h_source.html  Https_8h_source.html  Logger_8h_source.html  PredictorImpl_8h_source.html  Predictor_8h_source.html  Types_8h_source.html  WSImpl_8h_source.html  WS_8h_source.html  annotated.html  args_8h_source.html  base__strategy_8h_source.html  binance_8h_source.html  chrono_8h_source.html  classAction-members.html  classAction.html  classActionEmpty-members.html  classActionEmpty.html  classActionEmpty__coll__graph.md5  classActionEmpty__inherit__graph.map  classActionFactory-members.html  classActionFactory.html  classAction__inherit__graph.map  classAction__inherit__graph.md5  classArgs-members.html  classArgs.html  classArgs__coll__graph.map  classArgs__inherit__graph.md5  classBookEventGetterI-members.html  classBookEventGetterI.html  classBookEventGetterI__inherit__graph.map  classBookEventGetterI__inherit__graph.md5  classBuy-members.html  classBuy.html  classBuy__coll__graph.md5  classBuy__inherit__graph.map  classChartInterval-members.html  (+1710 more)
doc/latex/: Binance_8h_source.tex  Bybit_8h_source.tex  ChartInterval_8h_source.tex  Exchange_8h_source.tex  HttpsImpl_8h_source.tex  Https_8h_source.tex  Logger_8h_source.tex  PredictorImpl_8h_source.tex  Predictor_8h_source.tex  Types_8h_source.tex  WSImpl_8h_source.tex  WS_8h_source.tex  annotated.tex  args_8h_source.tex  base__strategy_8h_source.tex  binance_8h_source.tex  chrono_8h_source.tex  classAction.tex  classActionEmpty.tex  classActionEmpty__coll__graph.md5  classActionFactory.tex  classAction__inherit__graph.md5  classArgs.tex  classArgs__inherit__graph.md5  classBookEventGetterI.tex  classBookEventGetterI__inherit__graph.md5  classBuy.tex  classBuy__inherit__graph.md5  classChartInterval.tex  classChartInterval__inherit__graph.md5  classCurrentTime.tex  classDiffDepthStreamI.tex  classDiffDepthStreamI__inherit__graph.md5  classExchange_1_1Request.tex  classExchange_1_1RequestCancelOrder.tex  classExchange_1_1RequestNewOrder.tex  classHttps.tex  classHttpsSession.tex  classHttpsSession__coll__graph.md5  classIStrategy.tex  (+649 more)
example/: CMakeLists.txt
example/backtesting/: CMakeLists.txt  main.cpp
example/check_many_trading_pairs/: CMakeLists.txt  main.cpp
example/check_many_trading_pairs_config/: CMakeLists.txt  main.cpp
example/clickhouse-usage/: CMakeLists.txt  clickhouse.cpp
example/config_parser/: CMakeLists.txt  main.cpp
example/cpp_with_python/: CMakeLists.txt  machine_learning.py  main.cpp
example/cross_arbitrage/: CMakeLists.txt  main.cpp
example/example1/: CMakeLists.txt  main.cpp
example/json_reading/: CMakeLists.txt  main.cpp  test.json
example/prometheus_example/: CMakeLists.txt  main.cpp
example/send_to_redpanda/: CMakeLists.txt  main.cpp
example/session_manager/: CMakeLists.txt  main.cpp
example/test_reading/: CMakeLists.txt  main.cpp
grafana_dashboard/: Dashboard cryptobot-1723403052493.json  Dashboard cryptobot.json
sandbox_algo/: CMakeLists.txt
sandbox_algo/drift_detector/: CMakeLists.txt  drift_detector.cpp
src/: Binance.cpp  Bybit.cpp  Https.cpp  Logger.cpp  Predictor.cpp  WS.cpp  WSImpl.cpp  arbitrage_cycle.cpp  arbitrage_trade.cpp  base_strategy.cpp  bus.cpp  bybit.cpp  client_response.cpp  config.cpp  kline.cpp  market_data_consumer.cpp  market_order.cpp  market_order_book.cpp  market_update.cpp  mecx.cpp  order_gw.cpp  order_manager.cpp  trade_engine.cpp  trading_pair_context.cpp  types.cpp  wallet_asset.cpp
tests/: CMakeLists.txt
tests/local_tests/: CMakeLists.txt  main.cpp
tests/perfomance/hello_world/: CMakeLists.txt  main.cpp
tests/perfomance/json_reader/: CMakeLists.txt  jsonreader.cpp
tests/perfomance/lfqueue/: CMakeLists.txt  main.cpp
tests/perfomance/libuv_vs_boostasio/: CMakeLists.txt  main.cpp
tests/perfomance/market_order_book/: CMakeLists.txt  main.cpp
tests/perfomance/mempool/: CMakeLists.txt  main.cpp
tests/unit/: CMakeLists.txt  ConfigBackTesting.cpp  TradingPair.cpp  binance.cc  bybit.cc  cross_arbitrage.cc  https.cc  market_orderbook_backtesting.cc  mempool.cc  order_manager_backtesting.cc  orderbook.cc  parser_responce_binance.cc  position_keeper.cc  thread_utils.cc  trading_pair.cc  wallet_asset.cc
(+98 files in other folders)
