add_subdirectory(example1)
add_subdirectory(test_reading)
#add_subdirectory(clickhouse-usage)
add_subdirectory(cpp_with_python)
add_subdirectory(prometheus_example)
add_subdirectory(backtesting)
add_subdirectory(cross_arbitrage)
add_subdirectory(check_many_trading_pairs)
if (LOCAL_TEST)
    add_subdirectory(check_many_trading_pairs_config)
endif()
add_subdirectory(send_to_redpanda)
add_subdirectory(session_manager)
add_subdirectory(config_parser)

