
set (PROJECT_NAME unit_test)
project(${PROJECT_NAME})

set(CMAKE_CXX_STANDARD 23)

macro(cxx_executable_extended prjname src)
  set(prj ${PROJECT_NAME}_${prjname})
  add_executable(${prj} ${src})
  foreach (lib "${ARGN}")
    target_link_libraries(${prj} ${lib})
  endforeach()
  target_include_directories(${prj} PRIVATE ${CMAKE_SOURCE_DIR})
  set_property(TARGET ${prj} PROPERTY CXX_STANDARD 23)
  gtest_add_tests(TARGET ${prj})
endmacro()

macro(cxx_executable name dir libs)
cxx_executable_extended(${name} ${dir}/${name}.cc ${libs}  ${ARGN})
endmacro()

cxx_executable(trading_pair ${CMAKE_CURRENT_LIST_DIR} aot gtest_main magic_enum concurrentqueue)
cxx_executable(config_backtesting ${CMAKE_CURRENT_LIST_DIR} aot gtest_main tomlplusplus::tomlplusplus)
cxx_executable(orderbook ${CMAKE_CURRENT_LIST_DIR} aot concurrentqueue magic_enum gtest_main)
cxx_executable(order_manager_backtesting ${CMAKE_CURRENT_LIST_DIR} aot concurrentqueue unordered_dense::unordered_dense magic_enum gtest_main)
cxx_executable(cross_arbitrage ${CMAKE_CURRENT_LIST_DIR} aot concurrentqueue unordered_dense magic_enum gtest_main)
cxx_executable(parser_responce_binance ${CMAKE_CURRENT_LIST_DIR} aot concurrentqueue unordered_dense magic_enum gtest_main)
cxx_executable(position_keeper ${CMAKE_CURRENT_LIST_DIR} aot concurrentqueue unordered_dense magic_enum gtest_main gmock_main)
cxx_executable(wallet_asset ${CMAKE_CURRENT_LIST_DIR} aot concurrentqueue unordered_dense magic_enum gtest_main gmock_main)
cxx_executable(mempool ${CMAKE_CURRENT_LIST_DIR} aot concurrentqueue gtest_main gmock_main)
cxx_executable(thread_utils ${CMAKE_CURRENT_LIST_DIR} aot concurrentqueue gtest_main gmock_main)
cxx_executable(https ${CMAKE_CURRENT_LIST_DIR} aot concurrentqueue gtest_main magic_enum gmock_main)
cxx_executable(binance ${CMAKE_CURRENT_LIST_DIR} aot concurrentqueue gtest_main magic_enum gmock_main simdjson::simdjson)
cxx_executable(bybit ${CMAKE_CURRENT_LIST_DIR} aot concurrentqueue gtest_main magic_enum gmock_main)